--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                  <h3 class="estudante-nome">Marcelo</h3>
                  <img class="estudante-icone" src="github.png" alt="icone github">
                  <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-                 <img class="estudante-icone" src="<a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons">Instagram icons created by Freepik - Flaticon</a>" alt="icone instagram">
+                 <img class="estudante-icone" src="/tmp/guest-4vpp7c/Downloads/instagram.png" title="instagram icons">Instagram icons created by Freepik - Flaticon</a>" title="instagram icons">Instagram icons created by Freepik - Flaticon</a>" alt="icone instagram">
         </div>
         <div class="estudante-div">
      <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
